--- a/css_properties.html
+++ b/css_properties.html
@@ -3,6 +3,7 @@
 <head>
 <title>Common CSS Properties</title>
 <meta charset="utf-8">
+<link rel="stylesheet" href="./footer.css">
 <style>
   body {
 margin: 60px;
